Added clear current frame. Fixed A bug that occurs when clicking on remove frame when only 1 page exists.

--- a/resources/config.json
+++ b/resources/config.json
@@ -1,12 +1,13 @@
 {
-    "rows": 3,
-    "columns": 3,
+    "rows": 16,
+    "columns": 16,
     "pixel_size": 30,
     "nav_sizes": [1, 10, 50, 100, 500, 1000],
     "pixel_on_hex_color": "#000000",
     "pixel_off_hex_color": "#ffffff",
     "save_button_color": "#50bc29",
     "remove_current_frame_color": "#c42e1d",
+    "clear_current_frame_color": "#99e5e5",
     "add_empty_frame_color": "#f4f6f7",
     "add_duplicate_frame_color": "#12a7e2",
     "contrast_dark": "#919596",
